Added MapActivity and prepared Action View on it

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,4 +9,5 @@
     <string name="country">France</string>
     <string name="result_initial">La réponse s\'affichera ici</string>
     <string name="error_no_geo">aucune action définie pour l\'intent geo</string>
+    <string name="search">Chercher</string>
 </resources>
