--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="div">Divide</string>
     <string name="enter_hint">Enter a number</string>
     <string name="country">England</string>
+    <string name="search">Search</string>
     <string name="result_initial">The result will display here</string>
     <string name="error_no_geo">no action defined for geo intent</string>
 </resources>
