--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -10,4 +10,5 @@
     <string name="result_initial">La réponse s\'affichera ici</string>
     <string name="error_no_geo">aucune action définie pour l\'intent geo</string>
     <string name="search">Chercher</string>
+    <string name="google">Google</string>
 </resources>
